<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/large_margin"
    tools:context=".InputBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/data_book"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text3"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/gambar"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua" />

        </TableRow>

        <ImageView
            android:id="@+id/iv_book"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_image_gray_24dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/judul_book"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua" />
        </TableRow>

        <EditText
            android:id="@+id/edit_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/judul_book"
            android:inputType="text"
            android:singleLine="false" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/penulis"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua" />
        </TableRow>

        <EditText
            android:id="@+id/edit_penulis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/penulis"
            android:inputType="textPersonName" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua" />
        </TableRow>

        <EditText
            android:id="@+id/edit_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/genre"
            android:inputType="textPersonName" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_book"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pilih_tgl"
                android:inputType="date" />

            <Button
                android:id="@+id/btn_pilih_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_tgl" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/Sinopsis"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua" />

        </TableRow>

        <EditText
            android:id="@+id/edit_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/isi_sinopsis"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan" />

    </LinearLayout>
</ScrollView>