<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TampilBook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2F2F2F"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_book"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="@dimen/large_margin"
                app:srcCompat="@drawable/novel1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_judul"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/judul_book"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_penulis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:gravity="center_vertical"
                    android:text="@string/penulis"
                    android:textColor="#008EFF"
                    android:textSize="@dimen/medium_text2" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/genre"
                    android:textColor="#D5FFC107" />

                <TextView
                    android:id="@+id/tv_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/tanggal_book"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="@dimen/medium_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sinopsis"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text2" />

            <TextView
                android:id="@+id/tv_sinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/isi_sinopsis"
                android:textSize="@dimen/medium_text2" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>